package ar.utn.ba.ddsi.models.entities.enumerados;

public enum TipoAlgoritmoDeConsenso {
  MAYORIA_SIMPLE,
  MULTIPLES_MENCIONES,
  CONSENSO_ABSOLUTO
}
